# hackathon-samsung-26

./: .env.example  .env.k8s.example  .gitignore  Makefile  README.md  docker-compose.frontend.yml  docker-compose.health.yml  docker-compose.infra.yml  hackaton-0.0.1.md  mypy.ini  pyproject.toml  requirements-api.txt  requirements-ocr.txt  requirements.txt
scripts/: evaluate_detection.py
src/: main.py
src/api/: config.py  health.py  main.py  schemas.py
src/config/: settings.py
src/consumers/: __init__.py  base.py  processor.py  raw_files_consumer.py
src/core/: logger.py
src/detectors/: __init__.py  base.py  config.py  detector.py  ensemble_detector.py  nlp_detector.py  regex_detector.py  rule_based_detector.py
src/frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/infrastructure/: __init__.py  database.py  kafka.py  redis.py  redis_dedup.py  spark.py
src/jobs/: spark_scan.py
src/parsers/: __init__.py  base.py  csv_parser.py  doc_parser.py  docx_parser.py  factory.py  html_parser.py  image_parser.py  json_parser.py  mp4_parser.py  parquet_parser.py  pdf_parser.py  rtf_parser.py  txt_parser.py  xlsx_parser.py
src/scanner/: __init__.py  file_walker.py
src/services/: __init__.py  scanner_service.py
src/spark/: job.py
src/utils/: csv_report.py  json_report.py  ocr_cleaner.py
tests/: __init__.py  test_chunk_parsing.py  test_csv_report.py  test_ensemble_detector.py  test_nlp_prefilter.py  test_precision_pipeline.py  test_protection_level.py  test_rule_based_detector.py  test_spark_dedup.py
(+44 files in other folders)
