[project]
name = "pd-scanner"
version = "0.1.0"
description = "Personal Data Scanner"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true